Fix stacked menu spacing in IE
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/branches/3.5-TESTING@3954 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/html/NoAuth/css/3.5-default/header.css
+++ b/html/NoAuth/css/3.5-default/header.css
@@ -13,7 +13,7 @@
     font-size: 2em;
     font-weight: bold;
     left: 1.3em;
-    top: 0.21em;
+    top: 0.15em;
     z-index: 3;
 }
 
